# deal-radar

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.gcp.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
docs/plans/: 2026-01-23-credit-card-crawler-design.md  2026-02-06-notification-system-v2.md  2026-02-22-deal-radar-expansion-design.md  2026-02-22-deal-radar-expansion.md  2026-02-22-flash-deal-tracking-and-search-design.md  2026-02-22-flash-deal-tracking-and-search.md  2026-02-22-gcp-deployment.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/design-system/: MASTER.md
scripts/: entrypoint.sh
src/: cli.py  config.py  main.py
src/api/: products.py  recommend.py  router.py
src/crawlers/: base.py  utils.py
src/db/: seed.py
src/models/: __init__.py  flash_deal.py  notification_log.py  price_history.py  tracked_product.py
src/notifications/: __init__.py  discord.py  dispatcher.py  formatter.py  telegram.py
src/recommender/: engine.py  (+1 more)
tests/: test_base_tracker.py  test_crawler_firstbank.py  test_crawler_fubon.py  test_crawler_megabank.py  test_crawler_taishin.py  test_flash_deal_cross_reference.py  test_models_notification_log.py  test_momo_tracker.py  test_notifications_discord.py  test_notifications_dispatcher.py  test_notifications_formatter.py  test_notifications_telegram.py  test_pchome_tracker.py  test_products_api.py  test_recommender.py  test_scheduler_notifications.py  test_shopping_reward.py  test_tracker_models.py
(+27 files in other folders)
